--- a/src/app/components/city/city.html
+++ b/src/app/components/city/city.html
@@ -8,16 +8,15 @@
         id="cityInput"
         placeholder="City"
         ng-model="$ctrl.search"
-        ng-model-options="{updateOn: 'default blur', debounce: {default: 500, blur: 0}}"
+        ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0}}"
         ng-change="$ctrl.searchUpdate()"
       >
     </div>
     <div class="list-group">
-      <a href="#" class="list-group-item">city</a>
-      <a href="#" class="list-group-item">city</a>
-      <a href="#" class="list-group-item">city</a>
-      <a href="#" class="list-group-item">city</a>
-      <a href="#" class="list-group-item">city</a>
+      <a href="#" class="list-group-item" ng-repeat="city in $ctrl.cities">
+        <h4 class="list-group-item-heading">{{city.title}}</h4>
+        <p class="list-group-item-text">{{city.region}}</p>
+      </a>
     </div>
   </div>
 </div>
