--- a/src/app/components/faculty/faculty.html
+++ b/src/app/components/faculty/faculty.html
@@ -1,10 +1,10 @@
 <div class="form-group">
-  <label for="cityInput" class="sr-only">City</label>
+  <label for="facultyInput" class="sr-only">Faculty</label>
   <input
     type="search"
     class="form-control"
-    id="cityInput"
-    placeholder="City"
+    id="facultyInput"
+    placeholder="Faculty"
     ng-model="$ctrl.search"
     ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0}}"
     ng-change="$ctrl.searchUpdate()"
@@ -13,10 +13,8 @@
 <div class="list-group">
   <a
     class="list-group-item"
-    ng-repeat="city in $ctrl.cities"
-    ui-sref="city.university({cityId: city.cid})"
+    ng-repeat="faculty in $ctrl.faculties"
   >
-    <h4 class="list-group-item-heading">{{city.title}}</h4>
-    <p class="list-group-item-text">{{city.region}}</p>
+    {{faculty.title}}
   </a>
 </div>
