--- a/src/app/components/university/university.html
+++ b/src/app/components/university/university.html
@@ -1,10 +1,10 @@
 <div class="form-group">
-  <label for="cityInput" class="sr-only">City</label>
+  <label for="universityInput" class="sr-only">University</label>
   <input
     type="search"
     class="form-control"
-    id="cityInput"
-    placeholder="City"
+    id="universityInput"
+    placeholder="University"
     ng-model="$ctrl.search"
     ng-model-options="{updateOn: 'default blur', debounce: {default: 300, blur: 0}}"
     ng-change="$ctrl.searchUpdate()"
@@ -13,10 +13,9 @@
 <div class="list-group">
   <a
     class="list-group-item"
-    ng-repeat="city in $ctrl.cities"
-    ui-sref="city.university({cityId: city.cid})"
+    ng-repeat="university in $ctrl.universities"
+    ui-sref="city.university.faculty({universityId: university.id})"
   >
-    <h4 class="list-group-item-heading">{{city.title}}</h4>
-    <p class="list-group-item-text">{{city.region}}</p>
+    {{university.title}}
   </a>
 </div>
