--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 body {
   background-color: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+body > div:not(:last-child) {
+  margin-right: 20px;
 }
