--- a/src/app/components/faculty/faculty.html
+++ b/src/app/components/faculty/faculty.html
@@ -14,6 +14,7 @@
   <a
     class="list-group-item"
     ng-repeat="faculty in $ctrl.faculties"
+    ui-sref="city.university.faculty.edit({facultyId: faculty.id})"
   >
     {{faculty.title}}
   </a>
