--- a/src/app/components/faculty/faculty.html
+++ b/src/app/components/faculty/faculty.html
@@ -13,7 +13,7 @@
 <div class="list-group">
   <a
     class="list-group-item"
-    ng-repeat="faculty in $ctrl.faculties"
+    ng-repeat="faculty in $ctrl.faculties | limitTo: 5"
     ui-sref="city.university.faculty.edit({facultyId: faculty.id})"
   >
     {{faculty.title}}
